force-app/main/default/objects/Asset/fields/Id_Routeur__c.field-meta.xml
<CustomField>
    <fullName>Id_Routeur__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Id Routeur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>