force-app/main/default/objects/Asset/fields/Informations_compl_mentaires__c.field-meta.xml
<CustomField>
    <fullName>Informations_compl_mentaires__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Informations complémentaires</label>
    <type>TextArea</type>
</CustomField>