force-app/main/default/objects/Asset/fields/Lecteur_dvd_avec_tnt__c.field-meta.xml
<CustomField>
    <fullName>Lecteur_dvd_avec_tnt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lecteur DVD avec TNT</label>
    <type>Checkbox</type>
</CustomField>