force-app/main/default/objects/Asset/fields/Lecteur_dvd_hd__c.field-meta.xml
<CustomField>
    <fullName>Lecteur_dvd_hd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lecteur DVD HD</label>
    <type>Checkbox</type>
</CustomField>