force-app/main/default/objects/Asset/fields/Lecteur_dvd_integre_console__c.field-meta.xml
<CustomField>
    <fullName>Lecteur_dvd_integre_console__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lecteur DVD intégré console</label>
    <type>Checkbox</type>
</CustomField>