force-app/main/default/objects/Asset/fields/Lien_vers_confluence__c.field-meta.xml
<CustomField>
    <fullName>Lien_vers_confluence__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lien vers confluence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>