force-app/main/default/objects/Asset/fields/Liste_des_defauts_detectes__c.field-meta.xml
<CustomField>
    <fullName>Liste_des_defauts_detectes__c</fullName>
    <label>Liste des défauts détectés</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ne s&apos;allume pas</fullName>
            </value>
            <value>
                <fullName>Erreur de signal</fullName>
            </value>
            <value>
                <fullName>Voyant rouge</fullName>
            </value>
            <value>
                <fullName>Voyant éteint</fullName>
            </value>
            <value>
                <fullName>Surtension</fullName>
            </value>
            <value>
                <fullName>Cable endommagé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>