force-app/main/default/objects/Asset/fields/LocalIP__c.field-meta.xml
<CustomField>
    <fullName>LocalIP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IP Locale</label>
    <length>50</length>
    <type>Text</type>
</CustomField>