force-app/main/default/objects/Asset/fields/Localisation__c.field-meta.xml
<CustomField>
    <fullName>Localisation__c</fullName>
    <label>Localisation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Foyer</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Station</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>SAV MM</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Prestataire SAV</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Prestataire logistique</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Pas de localisation</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Fabricant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>