force-app/main/default/objects/Asset/fields/Localisation_routeur__c.field-meta.xml
<CustomField>
    <fullName>Localisation_routeur__c</fullName>
    <label>Localisation dans le foyer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Salon</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Salle à manger</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Chambre des parents</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Chambre des enfants</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Cuisine</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Bureau</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Chambre d&apos;amis</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Entrée / Couloir</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>