force-app/main/default/objects/Asset/fields/Marque_du_magnetoscope__c.field-meta.xml
<CustomField>
    <fullName>Marque_du_magnetoscope__c</fullName>
    <label>Marque du magnétoscope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LG</fullName>
            </value>
            <value>
                <fullName>Sony</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>