force-app/main/default/objects/Asset/fields/Message_en_cas_d_erreur__c.field-meta.xml
<CustomField>
    <fullName>Message_en_cas_d_erreur__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Message en cas d&apos;erreur</label>
    <type>TextArea</type>
</CustomField>