force-app/main/default/objects/Asset/fields/Modele_liste_limitee__c.field-meta.xml
<CustomField>
    <fullName>Modele_liste_limitee__c</fullName>
    <label>Modèle (liste limitée)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>Acer</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Apple</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Archos</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Asus</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>BlackBerry</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Dell</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Fujitsu</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Hewlett-Packard (HP)</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>HTC</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>IBM / Lenovo</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>LG</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Motorola</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Nokia</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Panasonic</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Samsung</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Sony</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Sony Ericsson</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Toshiba</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Autre</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>