force-app/main/default/objects/Asset/fields/Modele_tv__c.field-meta.xml
<CustomField>
    <fullName>Modele_tv__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Modèle Tv</label>
    <length>100</length>
    <type>Text</type>
</CustomField>