force-app/main/default/objects/Asset/fields/Motif_de_Suspension__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_Suspension__c</fullName>
    <label>Motif de suspension</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indisponibilité du matériel</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Remplacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>