force-app/main/default/objects/Asset/fields/Nombre_d_anomalies_majeures__c.field-meta.xml
<CustomField>
    <fullName>Nombre_d_anomalies_majeures__c</fullName>
    <label>Nombre d&apos;anomalies majeures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>