force-app/main/default/objects/Asset/fields/Nombre_de_peritel__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_peritel__c</fullName>
    <label>Nombre de péritel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>