force-app/main/default/objects/Asset/fields/Numero_d_appel__c.field-meta.xml
<CustomField>
    <fullName>Numero_d_appel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Numéro d&apos;appel</label>
    <type>Phone</type>
</CustomField>