force-app/main/default/objects/Asset/fields/Numero_de_poste__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_poste__c</fullName>
    <label>Numéro de poste</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>