force-app/main/default/objects/Asset/fields/Numero_IMEI__c.field-meta.xml
<CustomField>
    <fullName>Numero_IMEI__c</fullName>
    <externalId>true</externalId>
    <label>Numéro IMEI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>