force-app/main/default/objects/Asset/fields/Operateur__c.field-meta.xml
<CustomField>
    <fullName>Operateur__c</fullName>
    <label>Opérateur</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>ORANGE TELECOM</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>SFR</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>bouyguestelecom</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>KPN V.B</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Telenor Danmark</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>