force-app/main/default/objects/Asset/fields/Panne_constat_e__c.field-meta.xml
<CustomField>
    <fullName>Panne_constat_e__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Panne constatée</label>
    <length>33</length>
    <type>Text</type>
</CustomField>