force-app/main/default/objects/Asset/fields/Pays_operateur__c.field-meta.xml
<CustomField>
    <fullName>Pays_operateur__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pays operateur</label>
    <length>32</length>
    <type>Text</type>
</CustomField>