force-app/main/default/objects/Asset/fields/Peu_detecte__c.field-meta.xml
<CustomField>
    <fullName>Peu_detecte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Peu détecté</label>
    <type>Checkbox</type>
</CustomField>