force-app/main/default/objects/Asset/fields/Port_usb_tv__c.field-meta.xml
<CustomField>
    <fullName>Port_usb_tv__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Port USB TV</label>
    <type>Checkbox</type>
</CustomField>