force-app/main/default/objects/Asset/fields/portType__c.field-meta.xml
<CustomField>
    <fullName>portType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type de port</label>
    <length>50</length>
    <type>Text</type>
</CustomField>