force-app/main/default/objects/Asset/fields/Poste_emetteur_associe__c.field-meta.xml
<CustomField>
    <fullName>Poste_emetteur_associe__c</fullName>
    <label>Poste émetteur associé</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valeurs à fournir</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>