force-app/main/default/objects/Asset/fields/Poste_ExtId_SIPanel__c.field-meta.xml
<CustomField>
    <fullName>Poste_ExtId_SIPanel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Poste_ExtId_SIPanel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>