force-app/main/default/objects/Asset/fields/Poste_principal__c.field-meta.xml
<CustomField>
    <fullName>Poste_principal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Poste principal</label>
    <type>Checkbox</type>
</CustomField>