force-app/main/default/objects/Asset/fields/Prise_son__c.field-meta.xml
<CustomField>
    <fullName>Prise_son__c</fullName>
    <label>Prise son</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
                <label>Optique</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>RCA</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>SPDIF</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>AV1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>AV2</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Intrusif</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Casque</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Autre</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Micro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>