force-app/main/default/objects/Asset/fields/Produit_commande__c.field-meta.xml
<CustomField>
    <fullName>Produit_commande__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit commandé</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Équipements</relationshipLabel>
    <relationshipName>Equipements</relationshipName>
    <type>Lookup</type>
</CustomField>