force-app/main/default/objects/Asset/fields/Produit_sous_garantie__c.field-meta.xml
<CustomField>
    <fullName>Produit_sous_garantie__c</fullName>
    <label>Produit sous garantie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non</fullName>
            </value>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Exclusion garantie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>