force-app/main/default/objects/Asset/fields/Qualite_du_signal__c.field-meta.xml
<CustomField>
    <fullName>Qualite_du_signal__c</fullName>
    <label>Qualité du signal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Bon</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Moyen</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Mauvais</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>