force-app/main/default/objects/Asset/fields/R_paration_effectu_e__c.field-meta.xml
<CustomField>
    <fullName>R_paration_effectu_e__c</fullName>
    <label>Réparation effectuée</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valeurs</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>Fournir</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>