force-app/main/default/objects/Asset/fields/Reception_hd__c.field-meta.xml
<CustomField>
    <fullName>Reception_hd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Réception HD</label>
    <type>Checkbox</type>
</CustomField>