force-app/main/default/objects/Asset/fields/Reference_produit__c.field-meta.xml
<CustomField>
    <fullName>Reference_produit__c</fullName>
    <label>Référence produit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ROA01V1</fullName>
            </value>
            <value>
                <fullName>TAB02V1</fullName>
            </value>
            <value>
                <fullName>ROA01V2</fullName>
            </value>
            <value>
                <fullName>RFP06V1</fullName>
            </value>
            <value>
                <fullName>RTR05V1</fullName>
            </value>
            <value>
                <fullName>SFT03V1</fullName>
            </value>
            <value>
                <fullName>SFT04V1</fullName>
            </value>
            <value>
                <fullName>ROA01V2P1</fullName>
            </value>
            <value>
                <fullName>ROA01V2P2</fullName>
            </value>
            <value>
                <fullName>ROA01V1MON</fullName>
            </value>
            <value>
                <fullName>ROA01V2MON</fullName>
            </value>
            <value>
                <fullName>ROA01V2P1MON</fullName>
            </value>
            <value>
                <fullName>ROA01V2P2MON</fullName>
            </value>
            <value>
                <fullName>TAB02V1P3</fullName>
            </value>
            <value>
                <fullName>WAT07V1</fullName>
            </value>
            <value>
                <fullName>ROA01V2P2SET</fullName>
            </value>
            <value>
                <fullName>ROA01V2P2PL1SET</fullName>
            </value>
            <value>
                <fullName>ECM2720W</fullName>
            </value>
            <value>
                <fullName>49805000</fullName>
            </value>
            <value>
                <fullName>49805001</fullName>
            </value>
            <value>
                <fullName>SM01V1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>