force-app/main/default/objects/Asset/fields/Repeteur_Wifi__c.field-meta.xml
<CustomField>
    <fullName>Repeteur_Wifi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Répéteur Wifi</label>
    <type>Checkbox</type>
</CustomField>