force-app/main/default/objects/Asset/fields/Requete__c.field-meta.xml
<CustomField>
    <fullName>Requete__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requête</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Case.Account.Id</valueField>
        </filterItems>
        <filterItems>
            <field>Case.Type</field>
            <operation>equals</operation>
            <value>Réclamation matériel</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Équipements de mesure</relationshipLabel>
    <relationshipName>quipements</relationshipName>
    <type>Lookup</type>
</CustomField>