force-app/main/default/objects/Asset/fields/Ressource_de_service__c.field-meta.xml
<CustomField>
    <fullName>Ressource_de_service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ressource de service</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Équipements</relationshipLabel>
    <relationshipName>Equipements</relationshipName>
    <type>Lookup</type>
</CustomField>