force-app/main/default/objects/Asset/fields/Routeur_mmat__c.field-meta.xml
<CustomField>
    <fullName>Routeur_mmat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Routeur Médiamétrie</label>
    <type>Checkbox</type>
</CustomField>